# Dedalus-Datathon

./: .gitignore  Analisis.ipynb  README.md  app.py  chat.py  main.py  pyproject.toml  scratch_test_dom.py  setup_db.py
data/: cohorte_alergias.csv  cohorte_condiciones.csv  cohorte_encuentros.csv  cohorte_medicationes.csv  cohorte_pacientes.csv  cohorte_procedimientos.csv  doctores.csv
domain/: agent.py
presentation/: cli_app.py  streamlit_app.py
src/domain/: agent.py
src/persistance/: avisador.py  generador_pdf.py
src/presentation/: cli_app.py  streamlit_app.py
src/presentation/components/: __init__.py  voice.py
src/presentation/components/javascript/: stt.js  tts.js
